*fixed wraper card

--- a/src/styles/general/service-provider.sass
+++ b/src/styles/general/service-provider.sass
@@ -125,6 +125,7 @@
     
 #modal-provider
     position: static
+    background-color: transparent
     
 @media screen and (max-width: 1280px)
     .service-provider
