--- a/src/styles/general/service.sass
+++ b/src/styles/general/service.sass
@@ -16,6 +16,7 @@
         margin-top: 5px
     &__right
         margin-left: 50px
+        flex: 1
     .row
         display: flex
         flex-wrap: wrap
